...
        contentAlignment = Alignment.Center) {
          Text("Loading profile...", textAlign = TextAlign.Center)
        }
  } else {

    Scaffold(
        modifier = Modifier.testTag("profileEditScreen"),
        topBar = {
          TopAppBar(
              colors =
                  TopAppBarDefaults.topAppBarColors(
                      containerColor = MaterialTheme.colorScheme.primary,
                      navigationIconContentColor = MaterialTheme.colorScheme.onPrimary,
                      titleContentColor = MaterialTheme.colorScheme.onPrimary),
              modifier = Modifier.testTag("topAppBar"),
              title = { Text("") },
              navigationIcon = {
                IconButton(
                    modifier = Modifier.testTag("goBackButton"),
                    onClick = {
                      handleSafeBackNavigation(
                          isModified = isModified,
                          setShowDialog = { showDialog = it },
                          tagsViewModel = tagsViewModel,
                          navigationActions = navigationActions,
...
                    }) {
                      Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Back")
                    }
              },
              actions = {
                IconButton(
                    modifier = Modifier.testTag("checkButton"),
                    colors =
                        IconButtonDefaults.iconButtonColors(
                            contentColor = MaterialTheme.colorScheme.onPrimary),
                    onClick = {
                      if (isModified) {
                        profilesViewModel.saveEditedProfile(getEditedProfile())
...
                    }) {
                      Icon(Icons.Default.Check, contentDescription = "Save")
                    }
              })
        }) {
          Column(
              modifier = Modifier.padding(it).padding(padding).testTag("profileEditScreenContent"),
              horizontalAlignment = Alignment.CenterHorizontally) {
                // A composable that allows the user to preview and edit a profile picture
                ProfilePictureSelector(
                    url = user?.profilePictureUrl,
                    localBitmap = tempBitmap,
                    pictureChangeState = pictureChangeState,
...
                Text(
                    text = user!!.name,
                    style = TextStyle(fontSize = textSize.value.sp),
                    modifier =
                        Modifier.fillMaxWidth()
                            .wrapContentWidth(Alignment.CenterHorizontally)
                            .testTag("nameAndAge"))
                Spacer(modifier = Modifier.height(padding))

                // Catchphrase Input
                OutlinedTextField(
                    value = catchphrase,
                    onValueChange = {
                      if (it.text.length <= CATCHPHRASE_MAX) {
                        catchphrase = it
                        isModified = true
                      }
                    },
                    label = {
                      Text("Catchphrase", modifier = Modifier.testTag("catchphraseLabel"))
                    },
...

                // Description Input
                OutlinedTextField(
                    value = description,
                    onValueChange = {
                      if (it.text.length <= DESCRIPTION_MAX) {
                        description = it
                        isModified = true
                      }
                    },
                    label = { Text("Description") },
                    textStyle = TextStyle(fontSize = textSize.value.sp * 0.6),
                    modifier =
...
