<resources>
    <string name="app_name">IceBreakrr</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_web_client_id">579784939748-6e63a67fhpe0r74ik3qapu6kd4hm04r9.apps.googleusercontent.com</string>

    <string name="around_you">Around You</string>
    <string name="already_met">Already Met</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="No_Internet_Toast">No internet connection available</string>
    <string name="map">Map</string>
    <string name="location_loading">Map Loading...</string>
    <string name="Not_Implemented_Toast">Not yet implemented</string>

    <string name="your_location_title">Your Location</string>
    <string name="your_location_snippet">This is where you are</string>
    <string name="show_heatmap">Show Heatmap</string>
    <string name="hide_heatmap">Hide Heatmap</string>

    <string name="settings_screen_title">Settings</string>
    <string name="notifications_screen_title">Inbox</string>
    <string name="around_you_screen_title">Around You</string>

    <string name="more_tags">...</string>
    <string name="preview_profile">Tap to preview profile</string>

    <string name="block_report_modal_title">What would you like to do?</string>
    <string name="block_confirmation_message">Do you really want to block this user?</string>
    <string name="report_reason_prompt">Select a reason for reporting:</string>
    <string name="report_success_message">User successfully reported for: %1$s</string>
    <string name="block_success_message">User blocked successfully</string>

    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="block_yes">Yes</string>
    <string name="block_no">No</string>

    <string name="no_blocked_users">You have not blocked any users!</string>
    <string name="unblock_button">See blocked users</string>
    <string name="unblock_confirm">Unblock ?</string>
    <string name="unblock_confirm_message">Are you sure you want to unblock %1$s?</string>

    <string name="AI_button">See Discussion Starters</string>
    <string name="ai_retry">Retry</string>
    <string name="ai_copy">Copy</string>
    <string name="ai_icon">AI icon</string>
    <string name="Already_Met_Button_Text">"I Already Met This Person"</string>
    <string name="Already_Met_Settings_Button">People You Already Met</string>
    <string name="Already_Met_Delete_Accout_Button">Delete account</string>
    <string name="Already_Met_Logout_Button">Log Out</string>
    <string name="Already_Met_Button_Success">You successfully added this user to your already met list</string>
    <string name="no_already_met_users">You haven\'t met anyone yet. Go explore the world!</string>
    <string name="unmeet_confirm">Did you add this user by mistake?</string>
    <string name="unmeet_confirm_message">Remove from your already met list?</string>
    <string name="unmeet_yes">Yes</string>
    <string name="unmeet_no">No</string>
    <string name="here_is_a_possible_starter">Here is a possible starter:</string>

    <string name="blocked_profiles">Blocked Profiles</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="ask_to_toggle_location">Activate location sharing in the app settings!</string>
    <string name="ask_to_give_location_permission">Precise location permission is required to show profiles. Activate it in your phone settings</string>
    <string name="no_one_around">There is no one around. Try moving!</string>
    <string name="permission_popup_title">Location Permissions Required</string>
    <string name="permission_popup_content">This app requires precise location permission to work properly. Please grant it.</string>
    <string name="background_notification">Tracking location in the background</string>

    <string name="meeting_request_pending">Pending meeting requests</string>
    <string name="meeting_request_sent">Meeting request sent</string>

    <string name="filter">Filter</string>
    <string name="gender">Gender</string>
    <string name="gender_men">Men</string>
    <string name="gender_women">Women</string>
    <string name="gender_other">Other</string>
    <string name="age_range">Age Range</string>

    <string name="delete_account_dialog_title">You are about to delete your account</string>
    <string name="delete_account_dialog_message">Are you sure you want to delete your account?</string>
    <string name="delete_account_confirm">Delete account</string>
    <string name="delete_account_cancel">Cancel</string>

</resources>