...
  val isTesting = LocalIsTesting.current
  val myProfile = profilesViewModel.selfProfile.collectAsState()

  val screenHeight = LocalConfiguration.current.screenHeightDp.dp

  Scaffold(
      modifier = Modifier.testTag("settingsScreen").fillMaxSize(),
      topBar = { TopBar(stringResource(R.string.settings_screen_title)) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route ->
              if (route.route != Route.SETTINGS) {
                navigationActions.navigateTo(route)
...
                }
              },
              elevation = ButtonDefaults.buttonElevation(CARD_ELEVATION),
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.secondaryContainer),
              modifier = Modifier.fillMaxWidth().testTag("blockedUsersButton")) {
                Text(
                    stringResource(R.string.unblock_button),
                    color = MaterialTheme.colorScheme.primaryContainer)
              }

          Spacer(modifier = Modifier.height(screenHeight * RELATIVE_SPACING))
...
                }
              },
              elevation = ButtonDefaults.buttonElevation(CARD_ELEVATION),
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.secondaryContainer),
              modifier = Modifier.fillMaxWidth().testTag("alreadyMetButton")) {
                Text(
                    stringResource(R.string.Already_Met_Settings_Button),
                    color = MaterialTheme.colorScheme.primaryContainer)
              }

          Spacer(modifier = Modifier.height(screenHeight * RELATIVE_SPACING))
...
                      locationViewModel = locationViewModel)
                }
              },
              elevation = ButtonDefaults.buttonElevation(CARD_ELEVATION),
              colors =
                  ButtonDefaults.buttonColors(containerColor = MaterialTheme.colorScheme.outline),
              modifier = Modifier.fillMaxWidth().testTag("logOutButton")) {
                Text(
                    stringResource(R.string.Already_Met_Logout_Button),
                    color = MaterialTheme.colorScheme.onPrimary)
              }

          Spacer(modifier = Modifier.height(screenHeight * RELATIVE_SPACING))

          Button(
              onClick = { deleteAccountDialog = true },
              elevation = ButtonDefaults.buttonElevation(CARD_ELEVATION),
              colors =
                  ButtonDefaults.buttonColors(containerColor = MaterialTheme.colorScheme.error),
              modifier = Modifier.fillMaxWidth().testTag("deleteAccountButton")) {
                Text(
                    stringResource(R.string.Already_Met_Delete_Accout_Button),
                    color = MaterialTheme.colorScheme.onError)
              }
        }
    DeleteAccountDialog(
...
